--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ jdk:
  - oraclejdk8
 script:
  - mvn verify -B
+after_script:
+ - mvn jacoco:report
+ # @todo: use com.codaciy:codacy-coverage-reporter?
+ - java -cp codacy-coverage-reporter-2.0.2-assembly.jar com.codacy.CodacyCoverageReporter -l Java -r ./target/site/jacoco/jacoco.xml --projectToken $CODACY_PROJECT_TOKEN
