--- a/server/pom.xml
+++ b/server/pom.xml
@@ -41,7 +41,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
             <version>1.5.9.RELEASE</version>
 		</dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>1.5.9.RELEASE</version>
+        </dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -54,7 +58,13 @@
 			<scope>test</scope>
             <version>1.5.9.RELEASE</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>5.0.1.RELEASE</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
