--- a/server/pom.xml
+++ b/server/pom.xml
@@ -63,7 +63,10 @@
             <artifactId>spring-security-test</artifactId>
             <version>5.0.1.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
