FEAT - Categories as many to many

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -66,6 +66,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
+            <version>1.5.9.RELEASE</version>
         </dependency>
     </dependencies>
 
