BUG - Fix Travis CI Setup

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,9 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+# we cannot legally commit this to a public directory
+# cf. http://www.omdbapi.com/legal.htm
+src/main/resources/data/movies.json
+
+
