--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -34,6 +34,8 @@
     "languages": [
       "en",
       "fr"
-    ]
+    ],
+    "herokuDeployType": "jar",
+    "herokuAppName": "mediafury"
   }
 }
