--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sat Feb 10 13:59:05 CET 2018
 0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:mediafury|mediafury
 webAllowOthers=true
 webPort=8082
