--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "node_modules"
   ],
   "dependencies": {
+    "@angular/animations": "^5.2.4",
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
     "@angular/core": "5.2.0",
     "@angular/forms": "5.2.0",
-    "@angular/platform-browser": "5.2.0",
+    "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.9",
@@ -29,6 +30,7 @@
     "rxjs": "5.5.6",
     "swagger-ui": "2.2.10",
     "tether": "1.4.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "0.8.19"
   },
   "devDependencies": {
