--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -6,6 +6,11 @@ services:
             - SPRING_PROFILES_ACTIVE=prod,swagger
             - SPRING_DATASOURCE_URL=jdbc:postgresql://mediafury-postgresql:5432/mediafury
             - JHIPSTER_SLEEP=10 # gives time for the database to boot before the application
+            - JWT_SECRET=8ba03b7f5ce188f5ef890c6f213b109894ebb1eb
+            - MAILGUN_SMTP_PORT=25
+            - MAILGUN_SMTP_SERVER=localhost
+            - MAILGUN_SMTP_LOGIN=
+            - MAILGUN_SMTP_PASSWORD=
         ports:
             - 8080:8080
     mediafury-postgresql:
